--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ricardo Levano",
   "dependencies": {
     "body-parser": "^1.14.0",
+    "ejs": "^2.3.4",
     "express": "^4.13.3"
   }
 }
